# resnet_ibn_reid_attr

./: .gitignore  main.py  pyproject.toml
src/: const.py  datamodule.py  dataset.py  lightning_system.py  loss.py  metrics.py  model.py
